--- a/shinzin2/index2.html
+++ b/shinzin2/index2.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>Fullscreen Slit Slider with CSS3 and jQuery</title>
+        <title>劇団筑波小劇場2015年度新人公演 赤錆の霧</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Fullscreen Slit Slider with CSS3 and jQuery" />
         <meta name="keywords" content="slit slider, plugin, css3, transitions, jquery, fullscreen, autoplay" />
