--- a/shinzin/index.html
+++ b/shinzin/index.html
@@ -16,7 +16,7 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px)" href="Shinzin-PC.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px) and (min-height:1px)" href="Shinzin-PC.css" />
   		<link rel="stylesheet" type="text/css" media="screen and (max-width: 1199px)" href="Shinzin-Mobile.css" />
 	</head>
 
@@ -57,7 +57,22 @@
 			
 			<div id="arasuji">
 				<h2>あらすじ</h2>
-				<p>Coming Soon!</p>
+				<p>終末の時は突然やってきた！<br>
+				轟音、一閃、大地は穢れ、バベルの麓でキリンが燃える！<br>
+
+				生体汚染により心臓を失った者達、新生人類「ベベ」は悉く中心都市から排除され、<br>
+				強奪を繰り返すことで何とか命をつないでいた<br>
+				ある日、ベベの青年兵サジンの所属する一団は<br>
+				中心部から遠く離れた小都市、チューリップ自治区の教会に目をつける<br>
+
+				臭いものには蓋をするのか<br>
+				汚いものには目を背けるのか<br>
+				お前が愛をのたまう間に、子猫はガス室で死んでゆく<br>
+
+				いまや行くべき時が来た。私はこれから死ぬために、諸君はこれから生きるために。<br>
+				どちらが善いか誰にもわからぬ。神のみぞ知り給うのだ。<br>
+				――「ソクラテスの弁明」より――
+				</p>
 			</div>
 			<br>
 			
