今からwindowsを組み込んでページ分割をしようと思う

--- a/shinzin2/index.html
+++ b/shinzin2/index.html
@@ -58,19 +58,28 @@
 			<div id="arasuji">
 				<h2>あらすじ</h2>
 				<p>終末の時は突然やってきた！<br>
-				轟音、一閃、大地は穢れ、バベルの麓でキリンが燃える！<br>
-
-				生体汚染により心臓を失った者達、新生人類「ベベ」は悉く中心都市から排除され、<br>
-				強奪を繰り返すことで何とか命をつないでいた<br>
-				ある日、ベベの青年兵サジンの所属する一団は<br>
-				中心部から遠く離れた小都市、チューリップ自治区の教会に目をつける<br>
-
+				轟音、一閃、大地は穢れ<br>
+				バベルの麓でキリンが燃える！<br>
+				<br>
+				生体汚染により心臓を失った者達<br>
+				新生人類「ベベ」は悉く中心都市から<br>
+				排除され、強奪を繰り返すことで<br>
+				何とか命をつないでいた<br>
+				ある日、<br>
+				ベベの青年兵サジンの所属する一団は<br>
+				中心部から遠く離れた小都市<br>
+				チューリップ自治区の教会に目をつける<br>
+				<br>
 				臭いものには蓋をするのか<br>
 				汚いものには目を背けるのか<br>
-				お前が愛をのたまう間に、子猫はガス室で死んでゆく<br>
-
-				いまや行くべき時が来た。私はこれから死ぬために、諸君はこれから生きるために。<br>
-				どちらが善いか誰にもわからぬ。神のみぞ知り給うのだ。<br>
+				お前が愛をのたまう間に<br>
+				子猫はガス室で死んでゆく<br>
+				<br>
+				いまや行くべき時が来た。<br>
+				私はこれから死ぬために<br>
+				諸君はこれから生きるために。<br>
+				どちらが善いか誰にもわからぬ。<br>
+				神のみぞ知り給うのだ。<br>
 				――「ソクラテスの弁明」より――
 				</p>
 			</div>
