--- a/shinzin2/index.html
+++ b/shinzin2/index.html
@@ -16,12 +16,16 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="js/jquery.windows.js"></script>
+		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px) and (min-height:1px)" href="Shinzin-PC.css" />
   		<link rel="stylesheet" type="text/css" media="screen and (max-width: 1199px)" href="Shinzin-Mobile.css" />
 	</head>
 
 	<body>
 		<div id=wrawrapper>
+			<section id="0" class="window">
 			<div>
 			<header>
 				<h2>劇団筑波小劇場<br>平成二十七年度 新人公演</h2>
@@ -40,6 +44,7 @@
 					<a href="#link">LINK</a>
 				</h2>
 			</nav>
+			</section>
 			<br>
 			<br>
 			<br>
