3ページ目まで終了 次はキャスト&スタッフ

--- a/windows/index.html
+++ b/windows/index.html
@@ -33,11 +33,11 @@
             <div class="content">
                	<h2><font color="#000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公演情報</font></h2>
 				<h3>公演日</h3>
-				<p>7月25日<br>7月26日</p>
+				<p><font color="#000000">7月25日<br>7月26日</font></p>
 				<h3>会場</h3>
-				<p>筑波大学第一エリア1E102教室<a href="https://goo.gl/wgZxYV">(地図)</a></p>
+				<p><font color="#000000">筑波大学第一エリア1E102教室<a href="https://goo.gl/wgZxYV">(地図)</a></font></p>
 				<h3>料金</h3>
-				<p>無料</p>
+				<p><font color="#000000">無料</font></p>
             </div>
         </section>
 
