3ページ目終了

--- a/windows/index.html
+++ b/windows/index.html
@@ -74,8 +74,8 @@
 
         <section id="3" class="window">
 			<div class="content">
-			</h2>キャスト&スタッフ</h2>
-			<h3>キャスト</h3>
+			<h2>キャスト&スタッフ</h2>
+			<h3><font color="#ffffff">キャスト</font></h3>
 			<p>☆青山舜</p>
 			<p>☆関口瞳子</p>
 			<p>☆丸山利紗</p>
@@ -85,7 +85,7 @@
 			<p>伊藤匠</p>
 			<p>えのもと かや</p>
 			<br>
-			<h3>スタッフ</h3>
+			<h3><font color="#ffffff">スタッフ</font></h3>
 			<p>演出/脚本...伊藤匠</p>
 			<p>演出補佐...松永杏樹</p>
 			<p>制作...高谷健斗</p>
